testsuite/tests/rename/should_fail/rnfail051.stderr

rnfail051.hs:7:19: error: Parse error in expression
